[tool.poetry]
name = "1-lorentz-transformations"
version = "0.1.0"
description = ""
authors = ["David <dadch1404@gmail.com>"]
readme = "README.md"
packages = [{include = "1_lorentz_transformations"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
celluloid = "^0.2.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
